service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-app-service
spec:
  type: ClusterIP
  selector:
    app: chat-app
  ports:
    - protocol: TCP
      port: 80          # The port you'll use in the browser
      targetPort: 8090  # The port inside the container
