ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-app-ingress
  annotations:
    # Rewrite target valla static files and paths correct ga work avthayi
    nginx.ingress.kubernetes.io/rewrite-target: /
    # Socket.io connection drop avvakunda Sticky Sessions enable chesthunnam
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
spec:
  # Ee line chala important, Controller deenni batti recognize chesthundhi
  ingressClassName: nginx 
  rules:
  - http:
      paths:
      # 1. Main Chat App Path
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chat-app-service
            port:
              number: 80
      
      # 2. Profile Feature Path
      - path: /profile
        pathType: Prefix
        backend:
          service:
            name: profile-app-service
            port:
              number: 80
